# program-epistemic-model-checker

./: ExampleCherylsBirthday.hs  ExampleMrSumMrProduct.hs  Logics.hs  README.md  Running_Times.ipynb  ToSBV.hs  Translation.hs  cvc5cherylsBirthday.py  khoare.cabal  z3cherylsBirthday.py  z3dc.py  z3dcSP.py
app/: ExampleCherylsBirthday.hs  ExampleDiningCryptographers.hs  ExampleMrSumMrProduct.hs  ExamplePit.hs  Logics.hs  Main.hs  ToSBV.hs  Translation.hs  examplePitExtra.hs
doc/: ExampleCherylsBirthday.html  ExampleDiningCryptographers.html  Logics.html  ToSBV.html  Translation.html  doc-index.html  index.html
